--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
         "typescript": "^4.9.5"
     },
     "dependencies": {
+        "@emotion/babel-plugin": "^11.11.0",
         "@craco/craco": "^7.1.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.14.5",
-        "@mui/types": "^7.2.4",
         "axios": "^1.4.0",
+        "babel-plugin-emotion": "^7.2.4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-modal": "^3.16.1",
@@ -33,7 +33,6 @@
         "react-router-dom": "^6.15.0",
         "react-scripts": "^5.0.1",
         "reactjs-popup": "^2.0.5",
-        "styled-components": "^6.0.7",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
