--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,10 +2,7 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": [
-                "./src/*"
-            ],
-
+            "@/*": ["./src/*", ".src/.*(?:index|test)\\.ts).*\\.ts$/"]
         }
     }
 }
