* extract Modal as component * rename project in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fe-git-task",
+    "name": "react-dev-kit",
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
