--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react-modal": "^3.16.0",
         "@types/react-router": "^5.1.20",
         "@types/react-router-dom": "^5.3.3",
+        "@types/react-transition-group": "^4.4.6",
         "@types/styled-components": "^5.1.26",
         "eslint-config-prettier": "^9.0.0",
         "eslint-plugin-prettier": "^5.0.0",
@@ -20,8 +21,8 @@
         "typescript": "^4.9.5"
     },
     "dependencies": {
-        "@emotion/babel-plugin": "^11.11.0",
         "@craco/craco": "^7.1.0",
+        "@emotion/babel-plugin": "^11.11.0",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
         "axios": "^1.4.0",
@@ -32,6 +33,7 @@
         "react-router": "^6.15.0",
         "react-router-dom": "^6.15.0",
         "react-scripts": "^5.0.1",
+        "react-transition-group": "^4.4.5",
         "reactjs-popup": "^2.0.5",
         "web-vitals": "^2.1.4"
     },
