--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-  "plugins": ["@emotion"]
+    "env": {
+        "production": {
+            "plugins": [["@emotion", { "hoist": true }]]
+        },
+        "development": {
+            "plugins": [["@emotion", { "sourceMap": true, "autoLabel": true }]]
+        }
+    }
 }
