* setup storybooks with TS, Emotion themes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
         "baseUrl": ".",
     },
     "include": ["src"],
-    "extends": "./tsconfig.paths.json" // 👈 add this line
+    "extends": "./tsconfig.paths.json" // 👈 shortcut import paths
 }
