--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,18 @@
 {
+    "sourceType": "unambiguous",
+    "presets": [
+        [
+            "@babel/preset-env",
+            {
+                "targets": {
+                    "chrome": 100,
+                    "safari": 15,
+                    "firefox": 91
+                }
+            }
+        ],
+        "@babel/preset-typescript"
+    ],
     "env": {
         "production": {
             "plugins": [["@emotion", { "hoist": true }]]
