--- a/package.json
+++ b/package.json
@@ -1,90 +1,96 @@
 {
-  "name": "react-dev-kit",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "@babel/core": "^7.22.11",
-    "@babel/preset-env": "^7.22.14",
-    "@craco/craco": "^7.1.0",
-    "@emotion/babel-plugin": "^11.11.0",
-    "@storybook/addon-essentials": "^7.4.0",
-    "@storybook/addon-interactions": "^7.4.0",
-    "@storybook/addon-links": "^7.4.0",
-    "@storybook/addon-onboarding": "^1.0.8",
-    "@storybook/addon-styling": "^1.3.7",
-    "@storybook/addons": "^7.4.0",
-    "@storybook/blocks": "^7.4.0",
-    "@storybook/manager-api": "^7.4.0",
-    "@storybook/preset-create-react-app": "^7.4.0",
-    "@storybook/react": "^7.4.0",
-    "@storybook/react-webpack5": "^7.4.0",
-    "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.0",
-    "@storybook/theming": "^7.4.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.43",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "@types/react-modal": "^3.16.0",
-    "@types/react-router": "^5.1.20",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.6",
-    "@types/storybook__react": "^5.2.1",
-    "@types/styled-components": "^5.1.26",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-emotion": "^7.3.2",
-    "babel-plugin-named-exports-order": "^0.0.2",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-storybook": "^0.6.13",
-    "prettier": "^3.0.2",
-    "prop-types": "^15.8.1",
-    "storybook": "^7.4.0",
-    "typescript": "^4.9.5",
-    "webpack": "^5.88.2"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "axios": "^1.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^6.15.0",
-    "react-router-dom": "^6.15.0",
-    "react-scripts": "^5.0.1",
-    "react-transition-group": "^4.4.5",
-    "reactjs-popup": "^2.0.5",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "craco eject",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test-storybook": "test-storybook"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "react-dev-kit",
+    "version": "0.1.0",
+    "private": true,
+    "devDependencies": {
+        "@babel/core": "^7.22.11",
+        "@babel/preset-env": "^7.22.14",
+        "@babel/preset-typescript": "^7.22.11",
+        "@craco/craco": "^7.1.0",
+        "@emotion/babel-plugin": "^11.11.0",
+        "@react-theming/storybook-addon": "^1.1.10",
+        "@storybook/addon-essentials": "^7.4.0",
+        "@storybook/addon-interactions": "^7.4.0",
+        "@storybook/addon-links": "^7.4.0",
+        "@storybook/addon-onboarding": "^1.0.8",
+        "@storybook/addon-styling": "^1.3.7",
+        "@storybook/addons": "^7.4.0",
+        "@storybook/blocks": "^7.4.0",
+        "@storybook/manager-api": "^7.4.0",
+        "@storybook/preset-create-react-app": "^7.4.0",
+        "@storybook/react": "^7.4.0",
+        "@storybook/react-webpack5": "^7.4.0",
+        "@storybook/test-runner": "^0.13.0",
+        "@storybook/testing-library": "^0.2.0",
+        "@storybook/theming": "^7.4.0",
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.43",
+        "@types/react": "^18.2.21",
+        "@types/react-dom": "^18.2.7",
+        "@types/react-modal": "^3.16.0",
+        "@types/react-router": "^5.1.20",
+        "@types/react-router-dom": "^5.3.3",
+        "@types/react-transition-group": "^4.4.6",
+        "@types/storybook__react": "^5.2.1",
+        "@types/styled-components": "^5.1.26",
+        "babel-core": "^6.26.3",
+        "babel-loader": "^9.1.3",
+        "babel-plugin-emotion": "^7.3.2",
+        "babel-plugin-named-exports-order": "^0.0.2",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-storybook": "^0.6.13",
+        "prettier": "^3.0.2",
+        "prop-types": "^15.8.1",
+        "storybook": "^7.4.0",
+        "tsconfig-paths-webpack-plugin": "^4.1.0",
+        "typescript": "^4.9.5",
+        "webpack": "^5.88.2"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "axios": "^1.4.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router": "^6.15.0",
+        "react-router-dom": "^6.15.0",
+        "react-scripts": "^5.0.1",
+        "react-transition-group": "^4.4.5",
+        "reactjs-popup": "^2.0.5",
+        "web-vitals": "^2.1.4"
+    },
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "craco eject",
+        "storybook": "storybook dev -p 6006",
+        "build-storybook": "storybook build",
+        "test-storybook": "test-storybook"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "overrides": {
+        "@babel/plugin-transform-block-scoping": "7.18.9"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
